--- a/package.json
+++ b/package.json
@@ -10,12 +10,23 @@
   },
   "dependencies": {
     "@auth/mongodb-adapter": "^3.9.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@tabler/icons-react": "^3.34.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "icons-react": "^3.7.1",
+    "lucide-react": "^0.520.0",
     "mongodb": "^6.17.0",
     "mongoose": "^8.16.0",
+    "motion": "^12.18.1",
     "next": "15.3.4",
     "next-auth": "^5.0.0-beta.28",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -26,6 +37,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.3.4",
     "typescript": "^5"
   }
 }
