stored quiz in db

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tabler/icons-react": "^3.34.0",
+    "axios": "^1.10.0",
+    "axois": "^0.0.1-security",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
@@ -27,7 +29,7 @@
     "jsonrepair": "^3.12.0",
     "lucide-react": "^0.520.0",
     "mongodb": "^6.17.0",
-    "mongoose": "^8.16.0",
+    "mongoose": "^8.16.3",
     "motion": "^12.23.1",
     "next": "15.3.4",
     "next-auth": "^5.0.0-beta.28",
